make sure menu doesn't cause overflow when off-screen.
android bug.

--- a/src/assets/styles/base/_animation.scss
+++ b/src/assets/styles/base/_animation.scss
@@ -30,6 +30,9 @@
 	60%, 100% {
 		right: -5rem;
 	}
+	99%, 100% {
+		width: 0;
+	}
 }
 
 .animate-menuIn {
